<resources>
    <!-- General -->
    <string name="app_name">Turismo App</string>
    <string name="global_image_text">Imagen</string>
    <string name="global_email">Email</string>
    <string name="global_username">Usuario</string>
    <string name="global_password">Contraseña</string>
    <string name="global_remember">Recuerdame</string>
    <string name="global_save">Guardar</string>
    <string name="global_delete">Eliminar</string>
    <string name="global_continue">Continuar</string>
    <string name="global_back">Regresar</string>
    <string name="global_see">Ver</string>

    <!-- SignUp Activity -->
    <string name="signup_welcome_message">¡Iniciemos tu\nviaje juntos!</string>
    <string name="signup_register">Registrate</string>
    <string name="signup_existing_account">¿Ya tienes cuenta? <u>Inicia sesión</u></string>

    <!-- LogIn Activity -->
    <string name="login_welcome_message">¡Bienvenido de vuelta!</string>
    <string name="login_forgot_password"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="login_button">Iniciar sesión</string>
    <string name="login_create_account">¿No tienes cuenta? <u>Registrate</u></string>

    <!-- Home Activity -->
    <string name="home_location_text">Te encuentras en</string>
    <string name="home_location_text_default">...</string>
    <string name="home_search">Buscar</string>
    <string name="home_location_not_available">Ubicación no disponible</string>
    <string name="home_categories">Categorias</string>
    <string name="home_trips">Destinos destacados</string>
    <string name="home_my_trips">Mis viajes</string>

    <!-- Menu -->
    <string name="menu_home">Inicio</string>
    <string name="menu_my_trips">Mis viajes</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_favorite">Favoritos</string>
    <string name="menu_profile">Perfil</string>

    <!-- Favorites -->
    <string name="favorite_title">Favoritos</string>
    <string name="favorite_places">Lugares Favoritos</string>
    <string name="favorite_name">Nombre</string>
    <string name="favorite_view">Ver</string>

    <!-- Places -->
    <string name="places_title">Detalles</string>
    <string name="places_default_photo">0 / 0</string>
    <string name="places_image_count">%d / %d</string>
    <string name="places_default_review_content">Great place, really enjoyed our visit. Will definitely come back!</string>
    <string name="places_submit">Opinar</string>
    <string name="places_enter_review">Digite su opinion</string>

    <!-- Rating -->
    <string name="rating_title">¡Califica!</string>
    <string name="rating_send">Enviar</string>

    <!-- Profile -->
    <string name="profile_logout">Cerrar Sesión</string>
    <string name="profile_picture">Foto de perfil</string>
    <string name="profile_modify_data">Modificar información</string>
    <string name="profile_delete_account">Borrar cuenta</string>
    <string name="profile_name">Nombre</string>
    <string name="profile_country">Pais</string>
    <string name="profile_traveler_type">Tipo de viajero</string>
    <string name="profile_pending_configuration">Perfil pendiente de configuración</string>

    <!-- Edit Profile -->
    <string name="edit_profile_name">Nombre</string>
    <string name="edit_profile_country">Pais</string>
    <string name="edit_profile_age">Edad</string>
    <string name="edit_profile_nomad">Nómada</string>
    <string name="edit_profile_tourist">Turista</string>
    <string name="edit_profile_backpacker">Mochilero</string>

    <!-- My Trips -->
    <string name="my_trips_title">Mis viajes</string>
    <string name="my_trips_number_of_people">No. Personas: %d</string>
    <string name="my_trips_new">Crear viaje</string>
    <string name="my_trip_step_1_title">Paso 1: Seleccionar Destinos</string>
    <string name="my_trip_step_1_search_hint">Buscar destino</string>
    <string name="my_trip_step_1_discard">Descartar</string>
    <string name="my_trip_step_2_title">Paso 2: Organizar Destinos</string>
    <string name="my_trip_step_2_select_date">Seleeciona fecha</string>
    <string name="my_trip_step_2_itinerary">Itinerario</string>
    <string name="my_trip_step_3_title">Paso 3: Reservas de hotel</string>
    <string name="my_trip_step_3_hint_search_hotels">Buscar hotel</string>
    <string name="my_trip_step_3_reservations">Reservas</string>
    <string name="my_trip_step_4_title">Paso 4: Reserva de actividades</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>