<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/navigation_location"
        android:icon="@drawable/ic_location"
        android:title="@string/menu_my_trips"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/navigation_heart"
        android:icon="@drawable/ic_favorite_menu"
        android:title="@string/menu_favorite"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/navigation_person"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_profile"
        app:showAsAction="ifRoom"/>
</menu>
