<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_place"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/global_image_text"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/info_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/bg_default_place" />

        <LinearLayout
            android:id="@+id/info_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/iv_place"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_place"
            app:layout_constraintTop_toTopOf="@id/iv_place">

            <TextView
                android:id="@+id/tv_place_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/favorite_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_location"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:contentDescription="@string/global_image_text"
                    android:src="@drawable/ic_location" />

                <TextView
                    android:id="@+id/tv_country"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="14sp"
                    tools:text="@string/favorite_name" />
            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.utils.widget.MotionButton
            android:id="@+id/btn_view_place"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/bg_button"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/favorite_view"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
